<resources>
    <string name="app_name">Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded: </string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Radio Buttons-->
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android "\n" and Java by Square, Inc</string>

    <!-- Button Status -->
    <string name="download">Download</string>
    <string name="completed">Completed</string>
    <string name="we_are_loading">We are loading</string>
    <string name="select_one">Select one</string>

    <!--Notifications-->
    <string name="success">Success: </string>
    <string name="ups_something_fail">Ups something fail</string>
    <string name="channel_id">channel_loading_status</string>
    <string name="channel_name">Channel Loading Status</string>

    <!--Detail-->
    <string name="ok">Ok</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
</resources>
