<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio_button_glide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:onClick="onClickRadioButton"
            android:text="@string/glide_image_loading_library_by_bumptech" />

        <RadioButton
            android:id="@+id/radio_button_load_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:onClick="onClickRadioButton"
            android:text="@string/loadapp_current_repository_by_udacity" />

        <RadioButton
            android:id="@+id/radio_button__retrofit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center|start"
            android:onClick="onClickRadioButton"
            android:text="@string/retrofit_type_safe_http_client_for_android_and_java_by_square_inc" />
    </RadioGroup>

    <com.udacity.material.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_50"
        android:layout_margin="@dimen/default_margin"
        app:btn_color="@color/colorPrimary"
        app:btn_downloading_color="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>